# AstroStateMachine

./: README.md
astro_action_interfaces/: CMakeLists.txt  package.xml
astro_action_interfaces/action/: ApproachConnector.action  Init.action  MoveToPosition.action  WaitForOpCmd.action
astro_action_interfaces/msg/: AppConnData.msg  GoToPosData.msg  InitResult.msg  KeyValue.msg  UserCmd.msg
astro_actions/: CMakeLists.txt  package.xml
astro_actions/astro_actions/: __init__.py  astro_actions_names.py  init_action_server.py  wait_for_cmd_action_server.py
astro_actions/src/: go_to_pos_action.cpp
astro_state_machine/: package.xml  setup.cfg  setup.py
astro_state_machine/astro_state_machine/: astro_state_machine.py
astro_state_machine/astro_state_machine/states/: __init__.py  approach_connector.py  connect.py  go_to_pos.py  init.py  manual_control.py  search_connector.py  self_test.py  shutdown.py  wait_for_cmd.py
astro_state_machine/launch/: astro_state_machine.launch.py
docker/: compose.yaml  entrypoint.bash  node-red.Dockerfile
docker/flows/: flows.json
log/: latest_build
